...
    
    func show(quiz result: QuizResultsViewModel) {
        let alertModel = AlertModel(
            title: result.title,
            message: result.text,
            buttonText: result.buttonText,
            accessibilityIdentifier: "resultAlert",
            completion: { [weak self] in
                guard let self else { return }
                
                self.presenter.restartGame()
            })
        
...
